amaroK Changelog
==================
(c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.


  * fix: volume slider adjusting
  * fix: when dropping tracks to PL, order will stay the same as in FileBrowser
  * add: FileBrowser sortable by clicking on header
  * add: analyzer that distorts a bitmap
  * add: multiple analyzers now possible
  * add: "Software Mixer Only" option
  * Removed stale sigplay()
  * Cleaned a couple "deprecated" warnings
  * add: undo and redo playlist actions
  * fix: rewritten config dialog and moved into separate file
  * add: started configurable colors
  * change: spectrum analyser bars now have dynamics, ie. they move smoothly between values
  * add: mouse wheel over systray icon changes the track, hold shift to change the volume
  * change: rearranged menu order for systray (quit = last)
  * change: moved volume slider to the right, lets see if this is better
  * add: started a font selection page in settings
  * fix: Stream urls are now properly demangled/unescaped (%20 => space etc)

VERSION 0.6.91:
  * fix: ExpandButton submenu now slightly delayed
  * fix: dropping items into playlist
  * add: drop-target indicator line in PlaylistWidget, providing visual feedback
  * add: tray menu
  * add: random mode
  * add: crossfading between tracks
  * add: vertical lines between columns in Playlist
  * add: alternating item colors in Playlist
  * add: column "directory" in PlaylistWidget (for Grue:)
  * add: sorting by clicking on column headers in PlaylistWidget
  * fix: rewrote directory reading code in BrowserWidget.cpp.
      code is now much more readable, and it also fixes a bug.
  * add: additional columns in playlist for tags
  * fix: made metainfo reading algorithm faster
  * change: switched to TagLib for metainfo reading
  * add: button "play" in PlayerWidget.cpp is now a toggleButton
  * add: tray icon
  * fix: playlist window is optionally hideable with main widget when iconified to tray

VERSION 0.6.0: