@@ -3,6 +3,7 @@ amaroK Changelog
 (c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.
 
 
+  * fix: timedisplay also works for streams
   * fix: volume slider adjusting
   * fix: when dropping tracks to PL, order will stay the same as in FileBrowser
   * add: FileBrowser sortable by clicking on header
